--- a/api-server/build.gradle
+++ b/api-server/build.gradle
@@ -8,9 +8,13 @@ plugins {
 
 
 repositories {
-    mavenLocal()
+    mavenCentral()
     maven {
-        url = uri('https://repo.maven.apache.org/maven2/')
+        url 'https://maven.pkg.github.com/iineineno03k/todo-api-generator' // OWNERとREPOSITORYを適切な値に置き換える
+        credentials {
+            username = REPOSITORY_USER_NAME
+            password = REPOSITORY_TOKEN
+        }
     }
 }
 
@@ -45,8 +49,8 @@ publishing {
     }
     repositories {
         maven {
-            name = "todo-api-generator"
-            url = "https://github.com/iineineno03k/todo-api-generator"
+            url 'https://maven.pkg.github.com/iineineno03k/todo-api-generator'
+
             credentials {
                 username = REPOSITORY_USER_NAME
                 password = REPOSITORY_TOKEN
