--- a/api-client/package.json
+++ b/api-client/package.json
@@ -18,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/iineineno03k/practice-api-generator.git"
+    "url": "https://github.com/iineineno03k/practice-api-generator.git"
   },
   "author": "いね",
   "license": "ISC",
