--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,8 @@
 name: Publish package to GitHub Packages
 on:
   push:
-    branch: main
+    branches:
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -10,15 +11,14 @@ jobs:
       packages: write
     steps:
       - uses: actions/checkout@v4
-      # Setup .npmrc file to publish to GitHub Packages
       - uses: actions/setup-node@v4
         with:
           node-version: '20.x'
           registry-url: 'https://npm.pkg.github.com'
-          # Defaults to the user or organization that owns the workflow file
           scope: '@example'
-      - run: cd api-client
-      - run: npm ci
-      - run: npm publish
+      - run: |
+          cd api-client
+          npm ci
+          npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
