--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,16 +16,16 @@ jobs:
           node-version: '20.x'
           registry-url: 'https://npm.pkg.github.com'
           scope: '@example'
-      # .npmrcファイルの生成
-      - name: Create .npmrc
-        run: |
-          cat << EOF > .npmrc
-          @example:registry=https://npm.pkg.github.com
-          //npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}
-          EOF
+      - run: cd api-client
 
+      # .npmrcファイルを生成
+      - name: Create .npmrc in api-client
+        run: |
+          echo "@example:registry=https://npm.pkg.github.com" > .npmrc
+          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> .npmrc
+
+      # npm ciとnpm publishの実行
       - run: |
-          cd api-client
           npm ci
           npm publish
         env:
