--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,26 +4,26 @@ on:
     branches:
       - main
 jobs:
-  publish-npm:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: '20.x'
-          registry-url: 'https://npm.pkg.github.com'
-          scope: '@example'
-      - run: |
-          cd api-client
-          echo "@example:registry=https://npm.pkg.github.com" > .npmrc
-          echo "//npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}" >> .npmrc
-          npm ci
-          npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  # publish-npm:
+  #   runs-on: ubuntu-latest
+  #   permissions:
+  #     contents: read
+  #     packages: write
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - uses: actions/setup-node@v4
+  #       with:
+  #         node-version: '20.x'
+  #         registry-url: 'https://npm.pkg.github.com'
+  #         scope: '@example'
+  #     - run: |
+  #         cd api-client
+  #         echo "@example:registry=https://npm.pkg.github.com" > .npmrc
+  #         echo "//npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}" >> .npmrc
+  #         npm ci
+  #         npm publish
+  #       env:
+  #         NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   publish-gradle:
     runs-on: ubuntu-latest
@@ -38,6 +38,7 @@ jobs:
           distribution: 'temurin'
       - run: |
           cd api-server-java
+          chmod +x ./gradlew
           ./gradlew publish
         env:
           REPOSITORY_USER_NAME: ${{ github.actor }}
